# PNANA

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  README_CN.md  README_EN.md  build.sh  go.mod
.github/workflows/: build.yml  docs.yml  multi-arch-build.yml  pre-push-validation.yml  release.yml
cmake/: CheckAtomic.cmake  ConfigureLibVTerm.cmake  ConfigureTreeSitter.cmake  ConfigureTreeSitterLinking.cmake  FindLibSSH2.cmake  FindNlohmannJson.cmake  FindTreeSitterLanguages.cmake  Info.plist.in  OptionsSummary.cmake  PackageConfig.cmake  install_script_template.sh.in  package_install.sh.in  toolchain-arm64.cmake  toolchain-armv7.cmake  toolchain-riscv64.cmake
config/: config_manager.cpp  default_config.json
docs/: BUILD.md  COMPARISON.md  CONFIGURATION.md  CONFIGURATION_EN.md  DEPENDENCIES.md  DEPENDENCIES_EN.md  KEYBINDINGS.md  KEYBINDINGS_EN.md  LSP.md  MENU.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_EN.md  PUBLISHING_TO_PACKAGE_MANAGERS.md  QUICKSTART.md  README.md  README_EN.md  RELEASE_WORKFLOW_TUTORIAL.md  RELEASE_WORKFLOW_TUTORIAL_EN.md  ROADMAP.md  ROADMAP_EN.md  SMART_INDENT.md  SMART_INDENT_EN.md  THEMES.md  UNDO_REDO.md
example/language/: Cargo.toml  hello.c  hello.c3  hello.cpp  hello.cs  hello.py  hello.zig
go/: ssh_client.go
go/ssh/: auth.go  client.go  operations.go  pool.go  types.go  utils.go
include/pnana/core/: buffer_backend.h  buffer_factory.h  config_manager.h  document.h  document_manager.h  editor.h  gap_buffer.h  overlay_manager.h  piece_table.h  region_manager.h  rope.h  sqrt_decomposition.h
include/pnana/features/: command_palette.h  encoding_converter.h  extract.h  file_browser.h  image_preview.h  logo_manager.h  recent_files_manager.h  search.h  split_view.h  syntax_highlighter.h  terminal.h  tui_config_manager.h  ui_refresh_scheduler.h  welcome_logo_animation.h
include/pnana/input/: action_executor.h  event_parser.h  key_action.h  key_binding_manager.h
include/pnana/plugins/: editor_api.h  event_parser_api.h  file_api.h  icon_api.h  lua_api.h  lua_engine.h  lua_ui_runtime.h  path_validator.h  plugin_manager.h  system_api.h  theme_api.h  ui_api.h
include/pnana/ui/: ai_assistant_panel.h  ai_config_dialog.h  animation_menu.h  binary_file_view.h  clipboard_panel.h  command_palette_ui.h  completion_popup.h  create_folder_dialog.h  cursor_config_dialog.h  diagnostics_popup.h  dialog.h  encoding_dialog.h  extract_dialog.h  extract_path_dialog.h  extract_progress_dialog.h  file_browser_view.h  file_picker.h  format_dialog.h  fzf_popup.h  git_panel.h  help.h  helpbar.h  history_diff_popup.h  history_timeline_popup.h  icons.h  logo_menu.h  lsp_status_popup.h  move_file_dialog.h  new_file_prompt.h  package_detail_dialog.h  package_install_dialog.h  package_manager_panel.h  plugin_manager_dialog.h  recent_files_popup.h  save_as_dialog.h  split_dialog.h  split_welcome_screen.h  ssh_dialog.h  statusbar.h  statusbar_style_menu.h  (+11 more)
include/pnana/utils/: archive_validator.h  assembly_analyzer.h  bracket_matcher.h  clangd_flags.h  clipboard.h  clipboard_history.h  comment_syntax.h  file_info_utils.h  file_type_color_mapper.h  logger.h  (+7 more)
plugins/example-plugin/: init.lua
plugins/fg-live-grep-plugin/: init.lua
plugins/statusbar-beautify-plugin/: init.lua
plugins/theme-pro-plugin/: init.lua
python/: README.md  README_EN.md  requirements.txt
python/config/: config.yaml
python/scripts/: __main__.py  data_preparation.py  inference.py  run_pipeline.py  train_model.py
python/utils/: __init__.py  utils.py
scripts/: generate_release_notes.sh  install_dependencies.sh  install_package.sh
src/: main.cpp
src/core/: config_manager.cpp  document.cpp  document_manager.cpp  editor.cpp  editor_bracket_highlight.cpp  editor_commands.cpp  editor_comment.cpp  editor_cursor.cpp  editor_edit.cpp  editor_file_ops.cpp  editor_input.cpp  editor_lsp.cpp  editor_lua_ui_api.cpp  editor_ssh.cpp  editor_ui.cpp  editor_word_highlight.cpp  gap_buffer.cpp  overlay_manager.cpp  piece_table.cpp  region_manager.cpp  rope.cpp  sqrt_decomposition.cpp
src/features/: command_palette.cpp  encoding_converter.cpp  extract.cpp  file_browser.cpp  image_preview.cpp  logo_manager.cpp  recent_files_manager.cpp  search.cpp  split_view.cpp  ssh_client.cpp  syntax_highlighter.cpp  terminal.cpp  tui_config_manager.cpp  ui_refresh_scheduler.cpp  welcome_logo_animation.cpp
src/input/: action_executor.cpp  event_parser.cpp  key_action.cpp  key_binding_manager.cpp
src/plugins/: editor_api.cpp  event_parser_api.cpp  file_api.cpp  icon_api.cpp  lua_api.cpp  lua_engine.cpp  lua_ui_runtime.cpp  path_validator.cpp  plugin_manager.cpp  system_api.cpp  theme_api.cpp  ui_api.cpp
src/ui/: ai_assistant_panel.cpp  ai_config_dialog.cpp  animation_menu.cpp  binary_file_view.cpp  clipboard_panel.cpp  command_palette_ui.cpp  completion_popup.cpp  create_folder_dialog.cpp  cursor_config_dialog.cpp  diagnostics_popup.cpp  dialog.cpp  encoding_dialog.cpp  extract_dialog.cpp  extract_path_dialog.cpp  extract_progress_dialog.cpp  file_browser_view.cpp  file_picker.cpp  format_dialog.cpp  fzf_popup.cpp  git_panel.cpp  help.cpp  helpbar.cpp  history_diff_popup.cpp  history_timeline_popup.cpp  logo_menu.cpp  lsp_status_popup.cpp  move_file_dialog.cpp  new_file_prompt.cpp  package_detail_dialog.cpp  package_install_dialog.cpp  package_manager_panel.cpp  plugin_manager_dialog.cpp  recent_files_popup.cpp  save_as_dialog.cpp  search_dialog.cpp  split_dialog.cpp  split_welcome_screen.cpp  ssh_dialog.cpp  ssh_transfer_dialog.cpp  statusbar.cpp  (+12 more)
src/utils/: archive_validator.cpp  assembly_analyzer.cpp  bracket_matcher.cpp  clangd_flags.cpp  clipboard.cpp  clipboard_history.cpp  comment_syntax.cpp  file_info_utils.cpp  file_type_color_mapper.cpp  file_type_detector.cpp  file_type_icon_mapper.cpp  logger.cpp  match_highlight.cpp  project_root_finder.cpp  text_analyzer.cpp  text_utils.cpp  version_detector.cpp
tests/: CMakeLists.txt  bracket_match_highlight_perf_test.cpp  buffer_performance_test.cpp  match_highlight_perf_test.cpp  myers_diff_performance_test.cpp
(+176 files in other folders)
